Implement CAMARA Device Location - Location Retrieval API v0.5
  - Implement the API based on openAPI schema provided from CAMARA community
  - Integrate CAPIF framework for secure communication with 5G Core
  - Provide Transformation Function that map CAMARA objects to
    3GPP MonitoringEvent API data types
  - Provide invoker onboarding containerized app
  - Provide makefile for deployment automation
  - Provide CAPIF user creation script
